# OnePilot-AI

./: .editorconfig  .env.azure.example  .env.example  .gitignore  MULTI_INTENT_RAG_FIX.md  Makefile  PHASE_9_SUMMARY.md  RAG_IMPROVEMENTS_SUMMARY.md  RAG_ROOT_CAUSE_FIXES.md  README.md  VECTOR_DIMENSION_FIX_SUMMARY.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/docs/: TWO_STAGE_ROUTING.md
backend/scripts/: check_google_calendar_status.py  check_stack.py  debug_google_calendar_window.py  dev_setup.py  generate_gmail_refresh_token.py  generate_google_workspace_refresh_token.py  list_google_calendars_safe.py  manual_routing.py  reindex_knowledge_base.py  seed_demo.py
backend/tests/: conftest.py  test_admin_endpoints.py  test_agent_memory.py  test_agent_workflow.py  test_approvals.py  test_auth.py  test_billing.py  test_calendar_diagnostics.py  test_calendar_event_approval.py  test_calendar_event_utils.py  test_calendar_format.py  test_calendar_provider.py  test_calendar_time_parser.py  test_calendar_tool.py  test_chat_endpoint.py  test_chunking.py  test_config.py  test_cors_config.py  test_demo_data.py  test_demo_seed.py  test_demo_start.py  test_documents.py  test_errors.py  test_evaluation_summary.py  test_facet_detection.py  test_general_chat_tool.py  test_gmail_provider.py  test_golden_rag.py  test_google_calendar_create_event.py  test_health.py  test_ingestion.py  test_intent_classifier.py  test_intent_evaluation.py  test_knowledge_search.py  test_language_service.py  test_leads.py  (+30 more)
(+336 files in other folders)
