[project]
name = "onepilot"
version = "0.1.0"
description = "OnePilot AI – multi-tenant AI business workspace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "redis>=5.2",
    "qdrant-client>=1.12",
    "openai>=1.60",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "structlog>=24.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "python-ulid>=3.0",
    # Optional document loaders (graceful failure if absent)
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "faker>=33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onepilot"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["A003"]

[tool.ruff.lint.isort]
known-first-party = ["onepilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
